--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,28 @@
     <link rel="stylesheet" href="../lib/bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../lib/creative/css/component.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <script src="../lib/bootstrap-4.4.1-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
     <div class="container">
-        
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
-            <a class="navbar-brand" id="logo-img-link" href="index.html"><img class="logo-img" src="img/ibdb_logo.png" alt="Logo"></a>
-            
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand" id="logo-img-link" href="index.html"><img class="logo-img" src="img/ibdb_logo.png"
+                    alt="Logo"></a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+                aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -42,14 +50,15 @@
                 <input class="form-control my-0 py-1" type="text" placeholder="Search book" aria-label="Search">
                 <button id="search-btn" class="btn btn-secondary" type="button">Search</button>
                 <select id="search-dropdown" class="btn-secondary dropdown-toggle" data-toggle="dropdown">
-                      <option class="dropdown-item">Book name</option>
-                      <option class="dropdown-item">Author</option>
-                      <option class="dropdown-item">ISBN</option>
-                    </select>
+                    <option class="dropdown-item">Title</option>
+                    <option class="dropdown-item">Author</option>
+                    <option class="dropdown-item">ISBN</option>
+                </select>
             </div>
         </div>
     </div>
     </div>
     </div>
 </body>
+
 </html>
