--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="../lib/bootstrap-4.4.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../lib/creative/css/component.css">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
@@ -22,7 +22,6 @@
 <body>
 
     <div class="container">
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark cl-effect-14" id="cl-effect-14">
             <a class="navbar-brand" id="logo-img-link" href="index.html"><img class="logo-img" src="img/ibdb_logo.png"
                     alt="Logo"></a>
@@ -44,9 +43,9 @@
 
         <div class="toast" data-autohide="false">
             <div class="toast-header">
-              <strong class="mr-auto text-danger" id="toast-header">Error Message</strong>
-              <small class="text-muted" id="toast-time"></small>
-              <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+                <strong class="mr-auto text-danger" id="toast-header">Error Message</strong>
+                <small class="text-muted" id="toast-time"></small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
             </div>
             <div class="toast-body" id="toast-body">
             </div>
@@ -57,7 +56,8 @@
             <h2>every book is on one click distance</h2>
             <hr class="my-4">
             <div class="input-group md-form form-sm form-2 pl-0">
-                <input id="search-field" class="form-control my-0 py-1" type="text" placeholder="Search book" aria-label="Search" required>
+                <input id="search-field" class="form-control my-0 py-1" type="text" placeholder="Search book"
+                    aria-label="Search" required>
                 <button id="search-btn" class="btn btn-secondary" type="button">Search</button>
                 <select id="search-dropdown" class="btn-secondary dropdown-toggle" data-toggle="dropdown">
                     <option class="dropdown-item">Title</option>
@@ -70,7 +70,8 @@
     </div>
     </div>
 
-    <script src="js/render-book-list.js" defer></script>
+    <!-- Pass the search value between the pages -->
+    <script src="js/pass-search-data.js" defer></script>
 </body>
 
 </html>
