chenged order of buttons in index page

--- a/src/index.html
+++ b/src/index.html
@@ -58,12 +58,12 @@
             <div class="input-group md-form form-sm form-2 pl-0">
                 <input id="search-field" class="form-control my-0 py-1" type="text" placeholder="Search book"
                     aria-label="Search" required>
-                <button id="search-btn" class="btn btn-secondary" type="button">Search</button>
-                <select id="search-dropdown" class="btn-secondary dropdown-toggle" data-toggle="dropdown">
+                <select id="search-dropdown" class="btn-warning dropdown-toggle" data-toggle="dropdown">
                     <option class="dropdown-item">Title</option>
                     <option class="dropdown-item">Author</option>
                     <option class="dropdown-item">ISBN</option>
                 </select>
+                <button id="search-btn" class="btn btn-warning" type="button">Search</button>
             </div>
         </div>
     </div>
