fixed console errors

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
     <script src="js/pass-search-data.js" defer></script>
     <script src="js/authentication.js"></script>
     <script src="js/navigation.js"></script>
-    <script src="js/render-book-list.js" defer></script>
+    <!-- <script src="js/render-book-list.js" defer></script> -->
 </body>
 
 </html>
